FixedContentType#getAllowed uses List#of